basic while loop support; upgrade to java 22